MB-44289: magmakv::MetaData zero-initializes all members

Change-Id: Iff2b075843d40035d38e044d1606f11843149d30
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/145912
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>